[gd_scene load_steps=3 format=3 uid="uid://cbdoj4ij0nfps"]

[ext_resource type="Script" path="res://scripts/ui/UiCodeInput.gd" id="1_ia11y"]
[ext_resource type="Script" path="res://scripts/ui/UiConnectToGame.gd" id="1_ycsxb"]

[node name="ConnectToGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ycsxb")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.321569, 0.831373, 0.321569, 1)

[node name="StartConnection" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectButton" type="Button" parent="StartConnection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -37.5
offset_right = 150.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Start Connection"

[node name="JoinLobby" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CodeInput" type="LineEdit" parent="JoinLobby"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -112.5
offset_right = 150.0
offset_bottom = -37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Code"
alignment = 1
max_length = 4
context_menu_enabled = false
script = ExtResource("1_ia11y")

[node name="JoinButton" type="Button" parent="JoinLobby"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 37.5
offset_right = 150.0
offset_bottom = 112.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Join!"

[node name="Connected" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectedLabel" type="Label" parent="Connected"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -22.5
offset_right = 180.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Connected via WebRTC!"

[node name="IdLabel" type="Label" parent="Connected"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = 23.0
offset_right = 183.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[connection signal="pressed" from="StartConnection/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="text_changed" from="JoinLobby/CodeInput" to="JoinLobby/CodeInput" method="_on_text_changed"]
[connection signal="pressed" from="JoinLobby/JoinButton" to="." method="_on_join_button_pressed"]
